Fixing issues with salil's commit

--- a/styles/main.css
+++ b/styles/main.css
@@ -110,3 +110,33 @@ content: "\e036";
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
 }
+
+.notes-list {
+    position: relative;
+    -webkit-transition: top .1s;
+    -moz-transition: top .1s;
+    -ms-transition: top .1s;
+    -o-transition: top .1s;
+    transition: top .1s
+}
+
+.notes-list ul li{
+    font-size:12px;
+    list-style: none;
+}
+
+.notes-list div{
+    padding-top: 25px;
+}
+
+.notes-list button{
+    background: none;
+    border: 0px;
+    font-size: 13px;
+    color: #468C54;
+}
+
+.notes-list input{
+    width: auto;
+    float: left;
+}
